--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.4.0",
     "@ant-design/icons": "^4.8.0",
-    "@ant-design/pro-components": "^2.0.1",
+    "@ant-design/pro-components": "^2.3.52",
+    "@bytemd/plugin-gfm": "^1.20.0",
+    "@bytemd/react": "^1.20.0",
     "@umijs/max": "^4.0.41",
-    "antd": "^5.0.0"
+    "antd": "^5.0.0",
+    "bytemd": "^1.20.0",
+    "github-markdown-css": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
