--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@ant-design/pro-components": "^2.3.52",
     "@bytemd/plugin-gfm": "^1.20.0",
     "@bytemd/react": "^1.20.0",
+    "@types/lodash-es": "^4.17.6",
     "@umijs/max": "^4.0.44",
     "antd": "^5.0.0",
     "bytemd": "^1.20.0",
-    "github-markdown-css": "^5.1.0"
+    "github-markdown-css": "^5.1.0",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
