feat(square): convert markdown to plain in list

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "antd": "^5.0.0",
     "bytemd": "^1.20.0",
     "github-markdown-css": "^5.1.0",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "markdown-to-txt": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
